--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,13 @@ Cargo.lock
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
+=======
+/target
+/Cargo.lock
+
+
+# Added by cargo
+#
+# already existing elements were commented out
+
+#/target
