--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,12 @@
 [package]
 name = "bsaas"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-shuttle-runtime = "0.15.0"
-rocket = "0.5.0-rc.3"
-shuttle-rocket = "0.15.0"
-tokio = "1.28.0"
+shuttle-runtime = "0.49.0"
+rocket = "0.5.0"
+shuttle-rocket = "0.49.0"
